--- a/pom.xml
+++ b/pom.xml
@@ -78,7 +78,7 @@
         <version>3.2.2</version>
         <configuration>
           <suiteXmlFiles>
-            <suiteXmlFile>testng1.xml</suiteXmlFile>
+            <suiteXmlFile>Smoke.xml</suiteXmlFile>
           </suiteXmlFiles>
         </configuration>
       </plugin>
